--- a/toolchain/BUILD.bazel
+++ b/toolchain/BUILD.bazel
@@ -1,5 +1,1 @@
-load("//toolchain/profile:BUILD.bzl", "cc_build_profile")
-
-## FIXME: put this in toolchain/profile/cc, so we have
-# //toolchain/profile/cc
-cc_build_profile(name = "profile", visibility = ["//visibility:public"])
+# do not remove
